--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-    <h1>Quiz Application</h1>
+    <h1>Quiz Game</h1>
     <div class="quiz_wrapper">
         <div class="question" id="questionBox">
           
